assets/style.css
/* ... */
@keyframes star-shadow-animation {
    0% {
        opacity: 0;
    }

    10% {
        opacity: 0;
    }

    20% {
        opacity: 1;
    }

    80% {
        opacity: 1;
    }

    90% {
        opacity: 0;
    }

    100% {
        opacity: 0;
    }
}

.star--animated {
    animation: star-shadow-animation var(--animation-duration) ease-in-out infinite both;
}

.star--animated::after {
    animation: star-shadow-animation var(--animation-duration) ease-in-out infinite both;
}

.scroll-anchor {
    scroll-margin: 64px;
}

.contact-list {
    display: flex;
    flex-direction: column;
    gap: 8px;
    list-style-type: none;
}

.contact {
    display: grid;
    padding: 16px;
    background-color: var(--color-slate-950);
    border-radius: 16px;
    row-gap: 4px;
    column-gap: 16px;
    cursor: pointer;
    position: relative;
    overflow: hidden;
    grid-template-areas:
        "icon title"
        "icon link";
    justify-content: start;
    align-items: center;
}

.contact>* {
    z-index: 10;
}

.contact--icon {
    width: 32px;
    height: 32px;
    grid-area: icon;
}

.contact--title {
    font-size: 1rem;
    margin-bottom: 4px;
    grid-area: title;
}

.contact--link {
    text-decoration: none;
    color: var(--color-slate-50);
    grid-area: link;
}


.contact::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 0;
    background-color: var(--color-rose-950);
    transform: scaleX(0);
    transform-origin: left;
    transition: transform 250ms ease-in-out
}

.contact:hover::before {
    transform: scaleX(1);
}

.contact--link::after {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    content: "";
}

@media (min-width: 640px) {
    .contact-list {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
    }
}

@media (min-width: 1024px) {
    .contact-list {
        grid-template-columns: repeat(4, 1fr);
    }
}

.project-nav {
    position: relative;
    list-style-type: none;
    display: flex;
    flex-direction: row;
    overflow-x: auto;
    flex-wrap: wrap;
    column-gap: 8px;
    z-index: 200;
    background-color: var(--color-slate-950);
    margin-left: -16px;
    margin-right: -16px;
    padding: 4px 16px;
}

.project-nav--stickied {
    position: sticky;
    top: calc(var(--header-height) + 48px);
    flex-wrap: nowrap;
    transform: translateY(-100%);
    z-index: 100;
}

@media (min-width: 1024px) {
    .project-nav {
        margin-left: -32px;
        margin-right: -32px;
        padding: 4px 32px;
    }
}

.project-nav--item--active {
    color: var(--color-rose-500);
}

.project-nav--link {
    height: 48px;
    display: flex;
    flex-direction: row;
    cursor: pointer;
    gap: 8px;
    white-space: nowrap;
    align-items: center;
    text-decoration: none;
    color: currentColor;
}

.project-nav--link::before {
    content: "";
    display: inline-block;
    width: 20px;
    height: 20px;
    background-color: currentColor;
    mask: url("./icons/arrow-right-s-line.svg") no-repeat 50% 50%;
    mask-size: cover;
}

.project-nav--link:hover {
    color: var(--color-rose-300);
}

.project-nav--link:active {
    color: var(--color-rose-400);
}

